test case fix